--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,9 +2,14 @@
 <html>
   <head>
       <meta charset="utf-8">
-      <title>Microfish!</title>
+      <title>Singularity!</title>
+
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="description" content="Interactive container manager and generator for Singularity">
+      <meta name="keywords" content="singularity, containers">
+      <meta name="author" content="Vanessa Sochat">
+
       <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-      <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
       <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
       <link rel="stylesheet" href="{{ url_for('static', filename='css/datatables.min.css') }}">
 
