--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,28 +1,35 @@
 {% extends "base.html" %}
+
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+{% endblock %}
     
 {% block content %}
 
     <div class="col-md-3">
         <div class="row">
 
-        <form action="/container" method="POST">      
+          <form action="/container" method="POST">      
           <label for="container">Containers</label><br>
 
-          <select id="container" name="container" style="width:300px">
+          <select id="container" name="container" style="width:200px">
           {% for container in containers %}    
               <option value="{{ container }}">{{ container }}</option>
           {% endfor %}    
           </select>
           <input type="submit" value="view container" id="view_container">
                 
-        </form>
+          </form>
         </div>
 
-    </form>
+        <div class="row">
+         <a href="/recipe" target="_blank"><button class="btn btn-default btn-xl question_button">Recipe Generator</button></a>
+        </div>
 
 </div>
 <div class ="col-md-9">
-<h1 style="color:#999;padding-top:200px;padding-left:200px">Which container do you want to inspect?</h1>
+<img style="width:350px;padding-top:180px;margin-left:200px" src="{{ url_for('static', filename='img/robot.png') }}">
+<h1 style="color:#999;padding-left:300px">"Welcome {{ username }}!"</h1>
 </div>
 {% endblock %}
 
