--- a/app/templates/bases.html
+++ b/app/templates/bases.html
@@ -20,6 +20,9 @@
     <div class="row" style="padding-top:35px">
       {% include "terminal.html" %}
     </div>
+    <div class="row">
+       <div class="alert alert-info col-md-12" style="font-weight:800;font-style:uppercase;text-align:center" id="box">STATE IS IDLE</div>
+    </div>
 </div>
 
 </div>
@@ -33,19 +36,38 @@
             var prompt = $('.prompt')
             var xhr = new XMLHttpRequest()
             xhr.open("GET", "/bases/update", true)
+
+            $("#box").removeClass("alert-info") 
+            $("#box").text("RUNNING") 
+            $("#box").addClass("alert-warning")
+ 
+            // On finish, reload page
+            xhr.onloadend = function () {
+                var prompt = $('.prompt')
+                $("#box").removeClass("alert-warning") 
+                $("#box").text("DONE") 
+                $("#box").addClass("alert-success")
+                setTimeout(function() {
+                  document.location = "/recipe";
+                }, 1000);
+            }
+
+            // First message to user
             prompt.typed({
                 strings: ["Generating bases! Hang tight..."],
                 typeSpeed: 1,
             })
+
+            // Update user with dialog
             xhr.onprogress = function () {
                 var message = "<span class='gray'>" + xhr.responseText.replace("\n", "<br>") + "</span>"
                 //prompt.removeData();
                 $('.typed-cursor').text('');
-                var history = $('.history').html();
-                history = history ? [history] : [];
-                history.push('$ ' + message + '<br>');
+                $('.history').html('$ ' + message + '<br>');
+                //history = history ? [history] : [];
+                //history.push('$ ' + message + '<br>');
                 prompt.html('');
-                $('.history').html(history.join('<br>'));
+                //$('.history').html(history.join('<br>'));
                 $('section.terminal').scrollTop($('section.terminal').height());
             }
             xhr.send()
