--- a/tunel/templates/base.html
+++ b/tunel/templates/base.html
@@ -9,8 +9,6 @@
       <meta name="keywords" content="singularity, containers">
       <meta name="author" content="Vanessa Sochat">
 
-      <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-      <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
       <link rel="stylesheet" href="{{ url_for('static', filename='css/datatables.min.css') }}">
 
       <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
@@ -18,6 +16,11 @@
       <link rel="stylesheet" href="{{ url_for('static', filename='css/select2.min.css') }}">
       <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
       <script src="{{ url_for('static', filename='js/datatables.min.js') }}"></script>
+
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+      <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+      <link rel="stylesheet" href="{{ url_for('static', filename='css/skeleton.css') }}">
+
 
       {% block head %}
       {% endblock %}
