--- a/tunel/templates/settings.html
+++ b/tunel/templates/settings.html
@@ -24,7 +24,7 @@
                  <h3 class="title">Singularity Global Endpoints</a>
                   </h3>
                   <span style='float:right'>
-                  <a href='/containers'><button class="btn btn-default">View</button></a>
+                  <a href='/api/containers'><button class="btn btn-default">API</button></a>
                   <a href='/pull'><button class="btn btn-default">Pull</button></a>
             </div>
         </div>
