--- a/tunel/templates/footer.html
+++ b/tunel/templates/footer.html
@@ -1,4 +1,5 @@
-<footer class="footer">
+<div class="container">
+<footer class="footer" style="position: absolute; bottom:20px; margin:auto;">
    <div class="container">
      <span style="float:left">
          <span class="text-muted">Made with <i style="color:lightseagreen" class="fa fa-heart"></i> by 
@@ -9,4 +10,4 @@
      </span>
    </div>
 </footer>
-
+</div>
