neatening up templates

--- a/tunel/templates/main/settings.html
+++ b/tunel/templates/main/settings.html
@@ -57,7 +57,7 @@
     </div>
     <hr>
     <div>
-        {% include "sidebar.html" %}
+        {% include "main/sidebar.html" %}
     </div>
 </div>
 <div class="col-md-10">
