--- a/tunel/templates/recipe/index.html
+++ b/tunel/templates/recipe/index.html
@@ -45,7 +45,7 @@
                   </form>
 
                 <img src="{{ url_for('static', filename='img/robot.png') }}" 
-                     width="200px" 
+                     width="100%" 
                      style="float:right"
                      alt="Recipe Time!">
           </div>
@@ -76,7 +76,7 @@
               <h2>Back to It!</h2>
                  <div class="row">
                      <div class="col-md-12">
-                     {% include "sidebar.html" %}
+                     {% include "main/sidebar.html" %}
                      </div>
                  </div>
                </div>
