--- a/tunel/templates/action/pull.html
+++ b/tunel/templates/action/pull.html
@@ -1,89 +1,65 @@
-{% extends "base.html" %}
+{% extends "main/main.html" %}
 
-{% block head %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+{% block sidebar %}
+<div class="row" style='margin-top:20px'>
+    <div class='col-md-12'>
+        <h3>Pull from</h3>
+        <div class="input-group">
+            <input class="form-control" 
+                   id="image-uri" 
+                   aria-describedby="image-uri-help" 
+                   placeholder="Enter image uri">
+            <small id="image-uri-help"
+                   class="form-text text-muted">unique resource identifier</small>
+            <span class="input-group-btn">
+                <button class="btn btn-default" 
+                        id="pull_button" 
+                        style="margin-bottom: 20px; height: 34px;"
+                        type="button" tabindex="-1">Pull</button>
+            </span>
+        </div>
+    </div>
+    <div class="col-md-12" style="margin-top:30px">
+           <span class="label label-info">
+                <a href="/settings" style='color:white;'>Settings</a>
+           </span>
+    </div>
+</div>
+<div class="row">
+    <div class='col-md-12'>
+        <div class="btn-group-vertical btn-group-toggle" style="width:100%" data-toggle="buttons">
+            <label class="btn btn-info active">
+                <input endpoint='docker://' id="docker" name='pull-source' 
+                       autocomplete="off" type="radio" checked>Docker Hub</label>
+            <label class="btn btn-info" id="nvidia">
+            {% if nvidia %}
+                <input endpoint='nvidia://' id="nvidia" name='pull-source' 
+                       autocomplete="off" type="radio">Nvidia Cloud
+            {% else %}
+                <input endpoint='nvidia://' id="nvidia" name='pull-source' 
+                       autocomplete="off" type="radio" disabled>Nvidia Cloud
+            {% endif %}</label>
+                <label class="btn btn-info">
+                    <input endpoint='shub://' name='pull-source' id="shub" 
+                           autocomplete="off" type="radio">Singularity Hub</label>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
-{% block content %}
+{% block main %}
 
-<div class="container-fluid">
+{% include "terminal.html" %}
 
-<div class="row">
-
-<!-- SIDEBAR CONTROLS -->
-<div class="col-md-2">
-
-    <div class="row" style='margin-top:20px'>
-        <div class='col-md-12'>
-            <h3>Pull from</h3>
-            <div class="input-group">
-                <input class="form-control" 
-                       id="image-uri" 
-                       aria-describedby="image-uri-help" 
-                       placeholder="Enter image uri">
-                <small id="image-uri-help"
-                       class="form-text text-muted">unique resource identifier</small>
-                <span class="input-group-btn">
-                    <button class="btn btn-default" 
-                            id="pull_button" 
-                            style="margin-bottom: 20px; height: 34px;"
-                            type="button" tabindex="-1">Pull</button>
-                </span>
-           </div>
-        </div>
-        <div class="col-md-12" style="margin-top:30px">
-               <span class="label label-info">
-                    <a href="/settings" style='color:white;'>Settings</a>
-               </span>
-        </div>
-    </div>
-
-    <div class="row">
-
-        <div class='col-md-12'>
-
-            <div class="btn-group-vertical btn-group-toggle" style="width:100%" data-toggle="buttons">
-                <label class="btn btn-info active">
-                    <input endpoint='docker://' id="docker" name='pull-source' autocomplete="off" type="radio" checked>Docker Hub
-                </label>
-                <label class="btn btn-info" id="nvidia">
-                {% if nvidia %}
-                    <input endpoint='nvidia://' id="nvidia" name='pull-source' autocomplete="off" type="radio">Nvidia Cloud
-                {% else %}
-                    <input endpoint='nvidia://' id="nvidia" name='pull-source' autocomplete="off" type="radio" disabled>Nvidia Cloud
-                {% endif %}
-                </label>
-                <label class="btn btn-info">
-                    <input endpoint='shub://' name='pull-source' id="shub" autocomplete="off" type="radio">Singularity Hub
-                </label>
-           </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
-        {% include "sidebar.html" %}
-        </div>
-    </div>
-
-</div>
-
-<div class="col-md-10">
-    <div class="row" style="padding-top:35px">
-      {% include "terminal.html" %}
-    </div>
-    <div class="row">
-       <div class="alert alert-info col-md-12" style="font-weight:800;font-style:uppercase;text-align:center" id="box">STATE IS IDLE</div>
-    </div>
-    <p id="messages" style="display:none" class="alert alert-info"></p>
-
-</div>
-</div>
-</div>
 {% endblock %}
 
 {% block scripts %}
     <script type="text/javascript">
+
+        function showButton(color) {
+            $('.status-btn').hide();
+            $('.button.' + color).show();
+        }
 
         {% if nvidia %}{% else %}
           $("#nvidia").click(function(){
@@ -105,19 +81,15 @@
                 var xhr = new XMLHttpRequest()
                 xhr.open("GET", url , true)
 
-                $("#box").removeClass("alert-info") 
-                $("#box").text("RUNNING") 
-                $("#box").addClass("alert-warning")
+                // Hide status buttons, show running state
+                $("#box").text("") 
+                showButton('yellow');
  
                 // On finish, reload page
                 xhr.onloadend = function () {
                     var prompt = $('.prompt')
-                    $("#box").removeClass("alert-warning") 
-                    $("#box").text("DONE") 
-                    $("#box").addClass("alert-success")
-                    var containers = "<a href='/'><button class='btn btn-info'>View Containers</button></a>"
-                    $('.history').append( "<span class='gray'>"+ containers +"</span><br>");
-
+                    $("#box").text("done") 
+                    showButton('green');
                 }
 
                 // First message to user
@@ -134,9 +106,11 @@
                     $('.typed-cursor').text('');
 
                     $.each(lines, function(e,line){
-                        var line = "<span class='gray'>" + line + "</span><br>"
+                        var line = "<span class='gray'>" + line + "</span><br>";
+                        if (e==lines.length-1){
+                            line = "<a href='/'>" + line + "</a>";
+                        }
                         $('.history').append(line);
-
                     })
                     prompt.html('');
                     $('section.terminal').scrollTop($('section.terminal').height());
