--- a/tunel/templates/footer.html
+++ b/tunel/templates/footer.html
@@ -1,5 +1,5 @@
 <div class="container">
-<footer class="footer" style="position: absolute; bottom:20px; margin:auto;">
+<footer class="footer" style="position: fixed; bottom:20px; margin:auto;">
    <div class="container">
      <span style="float:left">
          <span class="text-muted">Made with <i style="color:lightseagreen" class="fa fa-heart"></i> by 
