--- a/tunel/templates/main/index.html
+++ b/tunel/templates/main/index.html
@@ -8,7 +8,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-2" style='padding-top:50px'>
-        {% include "sidebar.html" %}
+        {% include "main/sidebar.html" %}
         </div>
         <div class="col-md-10" style="padding-top:50px">
 
