--- a/tunel/templates/main/sidebar.html
+++ b/tunel/templates/main/sidebar.html
@@ -18,5 +18,5 @@
  <img name="robot" 
       onMouseOver="document.robot.src='{{ url_for('static', filename='img/robot-blinking.png') }}';" 
       onMouseOut="document.robot.src='{{ url_for('static', filename='img/robot.png') }}';"
-      style="width:250px; margin-left:30px" 
+      style="width:100%; margin-left:30px" 
       src="{{ url_for('static', filename='img/robot.png') }}">
