updates to footer

--- a/tunel/templates/footer.html
+++ b/tunel/templates/footer.html
@@ -1,13 +1,14 @@
-<div class="container">
-<footer class="footer" style="position: fixed; bottom:20px; margin:auto;">
-   <div class="container">
-     <span style="float:left">
-         <span class="text-muted">Made with <i style="color:lightseagreen" class="fa fa-heart"></i> by 
-           <a href="https://www.github.com/vsoch">vsoch</a></span> 
-     </span>
-     <span style="float:right">
-       <a href="/settings">settings</a> | <a href="/settings">api</a> | <a href="https://singularityhub.github.io/interface">docs</a>
-     </span>
-   </div>
+<footer class="footer" style="position: fixed; bottom:0px; margin:auto; background-color:white; width:100%">
+     <div class="row" style="background-color:white; padding-top:20px; padding-bottom:20px;">
+         <div class="col-md-8">
+             <span style="margin-left:270px;" class="text-muted">Made with <i style="color:lightseagreen" 
+                   class="fa fa-heart"></i> by 
+               <a href="https://www.github.com/vsoch">vsoch</a></span> 
+         </div>
+        <div class="col-md-4">
+            <a href="/settings">settings</a> | 
+            <a href="/settings">api</a> | 
+            <a href="https://singularityhub.github.io/interface">docs</a>
+        </div>
+    </div>
 </footer>
-</div>
