--- a/tunel/templates/terminal.html
+++ b/tunel/templates/terminal.html
@@ -82,7 +82,7 @@
       <span class="button status-btn yellow" style="display:none"></span>
       <span class="button status-btn red" style="display:none"></span>
       <span style="margin-left:30px;font-style:uppercase;"
-            id="box">state is idle</span>
+            id="box"></span>
     </header>
     <section class="terminal">
         <div class="history"></div>
