updating globus auth flow

--- a/tunel/templates/plugins/globus/index.html
+++ b/tunel/templates/plugins/globus/index.html
@@ -9,7 +9,7 @@
 {% block main %}
 
 <!-- Only show search form if logged in-->
-{% if auth_uri %}{% else %}
+{% if needs_update %}{% else %}
 <div class="row">
     <h3>Globus Endpoints</h3>
     <div class="row" style='margin-top:20px'>
@@ -62,31 +62,25 @@
 </div>
 {% endif %}
 
-{% if auth_uri %}
+{% if needs_update %}
+ 
 <!-- Needs to authenticate with code -->
 <div class="row">
-    <div class="col-md-2" style="margin:auto; margin-top:15%">
+    <div class="col-md-5" style="margin:auto;">
 
-       <div id='login-section' style='display:none'>
-            <img style="margin:auto;margin-bottom:20px; width:100%" src="{{ url_for('static', filename='img/plugin-globus.png') }}">
-            <form class="form" action="/globus" role="form" autocomplete="off" id="formLogin" novalidate="" method="POST">
-            <div class="form-group login-section" style="display-none">
-                <input type="text" 
-                       placeholder="enter code" 
-                       class="form-control form-control-lg rounded-0" name="code" id="code" required="">
-            </div>
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-            <button type="submit" 
-                    id="login-button"
-                    class="login-section btn btn-info float-right">Login</button>
-            </form>
-          </div>
-          <a href="{{ auth_uri | safe }}" target="_blank">
-          <button type="button"
-                  id="code-button"
-                  class="btn btn-primary" style='width:100%'>Globus Login
-          </button></a>
-    </div>
+       <div id='update-section' style="margin:auto; padding-top:75px">
+            <img style="margin:auto; padding-bottom:30px; display:block; width:300px; margin:auto" src="{{ url_for('static', filename='img/plugin-globus.png') }}">
+            <h3>Issue the following commands to update your tokens:</h3>
+            <p class="well">
+                <strong># the container name is "tunel," type docker ps to see the name</strong><br>
+                docker exec -it tunel python /code/script/update_tokens.py
+            </p>
+            <p>When you have updated your tokens, reload the page.</p>
+            <a href="/globus">
+            <button type="button"
+                  class="btn btn-primary" style='width:100%'>Refresh Portal
+            </button></a>
+      </div>
   </div>
 </div>
 {% endif %}
@@ -95,11 +89,7 @@
 {% block scripts %}
     <script type="text/javascript">
 
-        {% if auth_uri %}
-        $("#code-button").click(function(){
-           $("#code-button").hide();
-           $("#login-section").show();
-        });
+        {% if needs_update %}
         {% else %}
         $("#search_button").click(function(){
 
