--- a/tunel/templates/plugins/globus/index.html
+++ b/tunel/templates/plugins/globus/index.html
@@ -12,7 +12,7 @@
 {% if needs_update %}{% else %}
 <div class="row">
     <h3>Globus Endpoints</h3>
-    <div class="row" style='margin-top:20px'>
+        <div class="row" style='margin-top:20px'>
         <div class='col-md-12'>
             <form id="term-search-form" action="{{ url_for('globus') }}" method="post">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
@@ -37,6 +37,7 @@
 {% if endpoints %}
 <div class="row">
     <input type="text" id="searchInput" onkeyup="tableSearch()" style="margin-bottom:10px" placeholder="Search names...">
+    <p class="alert alert-info" id="message-activate" style="display:none;padding: 8px; margin-left: 10px"></p>
     <table id="label_table" class="table table-striped table-bordered" cellspacing="0" width="100%">
     <thead>
         <tr>
@@ -62,7 +63,10 @@
         {% for endpoint in endpoints %}
             <tr class="tableRow">
                 <td data-search="{{ endpoint.id }}">
-                    {% if endpoint.active %}<a href="/globus/{{ endpoint.id }}">{{ endpoint.id }}</a>{% else %}{{ endpoint.id }}{% endif %}
+                    {% if endpoint.active %}<a href="/globus/{{ endpoint.id }}">{{ endpoint.id }}</a>{% else %}
+                    <a class="makeactive" data-uid="{{ endpoint.id }}" 
+                                          target="_blank" 
+                                          href="https://www.globus.org/app/endpoints/{{ endpoint.id }}/activate">{{ endpoint.id }}</a>{% endif %}
                 </td>
                 <td data-search="{{ endpoint.active }} {{ endpoint.gc }}">
                       {% if endpoint.active %}<span class="label label-success">active</span>{% endif %}
@@ -107,8 +111,22 @@
 {% block scripts %}
     <script type="text/javascript">
 
+        // If there is an error, the user will be shown by appending here
+        {% if message %}
+            $('#message-activate').append("{{ message }}");
+            $('#message-activate').show();
+        {% endif %}
+
         {% if needs_update %}
         {% else %}
+
+        $('.makeactive').click(function(){
+            uid = $(this).attr('data-uid');
+            message='Once you have authenticated for the endpoint in the Globus portal,';
+            message+='view <a href="/globus/' + uid + '"> the endpoint details.</a>';
+            $('#message-activate').append(message);
+            $('#message-activate').show();
+        });
 
         function tableSearch() {
 
